2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Tags): Document GTAGS_ARGS.
	* lib/am/tags.am (GTAGS): Added GTAGS_ARGS.  From Shigio Yamaguchi.

2001-07-19  Tom Tromey  <tromey@redhat.com>
            Alexandre Duret-Lutz  <duret_g@epita.fr>

	Fix for ccnoco.test, subobj8.test:
	* m4/Makefile.am (m4data_DATA): Added auxdir.m4.
	* tests/Makefile.am (XFAIL_TESTS): Removed ccnoco.test,
	subobj8.test.
	* m4/minuso.m4 (AM_PROG_CC_C_O): Use absolute path to compile.
	Use AM_AUX_DIR_EXPAND.
	* lib/compile: Handle case where `-o' argument is the name of an
	executable, not an object file.
	* m4/auxdir.m4: New file, from...
	* m4/missing.m4: ... here.  Moved AM_AUX_DIR_EXPAND.
	* automake.in (handle_single_transform_list, lang_c_rewrite):
	Require compile using `require_config_file'.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Program and Library Variables): Added X example
	for _LDADD.

2001-07-19  Tom Tromey  <tromey@redhat.com>

	* automake.texi (Distributing): Updated to reflect new license.

2001-07-18  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (require_build_directory): New function, extracted
	from ...
	(handle_single_transform_list): ... here.
	(require_build_directory_maybe): New function.
	(handle_prograns, handle_libraries, handle_ltlibraries): Call
	require_build_directory_maybe() to ensure the subdirectory
	in which a target may lie will exist when the target is created.
	(handle_libraries, handle_ltlibraries): Use basename before
	checking library name.
	* lib/am/library.am (%LIBRARY%): Depend on %DIRSTAMP%.
	* lib/am/ltlibrary.am (%LTLIBRARY%): Likewise.
	* lib/am/program.am (%PROGRAM%): Likewise.

2001-07-18  Tim Van Holder  <tim.van.holder@pandora.be>

	* m4/missing.m4: Reword comment.

2001-07-18  Pavel Roskin  <proski@gnu.org>

	* automake.texi: Rename AM_DEPENDENCIES to _AM_DEPENDENCIES.
	* tests/gcj.test: Likewise.
	* tests/gcj2.test: Likewise.
	* tests/gcj3.test: Likewise.
