@@ -103,6 +103,7 @@ depend.test \
 depend2.test \
 depend3.test \
 depend4.test \
+dirname.test \
 discover.test \
 distcommon.test \
 distdir.test \
@@ -250,6 +251,7 @@ spell2.test \
 spell3.test \
 spelling.test \
 stamph.test \
+stamph2.test \
 stdlib.test \
 subdir.test \
 subdir2.test \
