@@ -1,3 +1,12 @@
+2001-07-20  Derek Price  <dprice@collab.net>
+
+	* m4/header.m4 (AM_CONFIG_HEADER): Create stamp-h files in the correct
+	locations.
+	* tests/dirname.test: New test.
+	* tests/stamph2.test: New test.
+	* tests/Makefile.am: Add new tests.
+	* tests/Makefile.in: Regenerated.
+
 2001-07-19  Tom Tromey  <tromey@redhat.com>
 
 	* automake.texi (Tags): Document GTAGS_ARGS.
